--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 </div>
 <div class="flex items-center justify-between px-2 border-b h-14 lg:h-16 sm:px-4 bg-primaryBg border-b-disabledFg">
 <div class="flex items-center gap-3 mr-4">
-    <a href=".../eingg/m/">
+    <a href="/m/">
         <div class="relative block w-12 h-12 lg:h-16"><img alt="eigenlayer logo" loading="lazy" decoding="async" data-nimg="fill" src="markDarkA.svg" style="position: absolute; height: 100%; width: 100%; inset: 0px; color: transparent;"></div>
     </a>
 </div>
-<div class="items-center justify-between w-full max-w-sm gap-4 mr-auto desktop-nav"><span class="text-ShortTextM hover:underline text-center text-accentPurple"><a href=".../eingg/m/">Dashboard</a></span><span class="text-ShortTextM font-ibmPlexMono hover:underline text-center text-white "><a href="restake.html">Restake</a></span><span class="text-ShortTextM font-ibmPlexMono hover:underline text-center  text-white"><a href="operator.html">Operator</a></span>
+<div class="items-center justify-between w-full max-w-sm gap-4 mr-auto desktop-nav"><span class="text-ShortTextM hover:underline text-center text-accentPurple"><a href="/m/">Dashboard</a></span><span class="text-ShortTextM font-ibmPlexMono hover:underline text-center text-white "><a href="restake.html">Restake</a></span><span class="text-ShortTextM font-ibmPlexMono hover:underline text-center  text-white"><a href="operator.html">Operator</a></span>
     <span
-        class="text-ShortTextM font-ibmPlexMono text-white hover:underline text-center text-white"><a href=".../eingg/m/">AVS</a></span>
+        class="text-ShortTextM font-ibmPlexMono text-white hover:underline text-center text-white"><a href="/m/">AVS</a></span>
 </div>
 <div class="flex items-center">
 	<button class="h-fit font-ibmPlexMono inline-block focus:border-borderFocus focus:shadow-[0px_0px_0px_4px_rgba(255,255,255,0.24)] outline-none bg-interactivePrimary border-2 border-transparent hover:bg-interactivePrimaryHover active:bg-interactivePrimaryPress focus:bg-interactivePrimaryFocus text-inversePrimaryFg px-4 py-2 text-ShortTextS w-fit"
-        type="button" data-cypress="connectWallet"><a href=".../eingg/m/">Connect Wallet</a></button>
+        type="button" data-cypress="connectWallet"><a href="/m/">Connect Wallet</a></button>
         <button type="button" aria-haspopup="dialog" aria-expanded="false" aria-controls="radix-:r0:" data-state="closed" class="sidemenu-open outline-none h-fit w-fit inline-block focus:shadow-[0px_0px_0px_4px_rgba(255,255,255,0.24)] outline-none disabled:cursor-not-allowed bg-interactivePrimary border-2 border-transparent hover:bg-interactivePrimaryHover active:bg-interactivePrimaryPress focus:bg-interactivePrimaryFocus text-inversePrimaryFg hover:text-inverseTertiaryFg p-2 text-ShortTextS ml-2">
         	<div class="flex items-center justify-center w-5 h-5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="w-5 h-5"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path></svg>
         	</div>
@@ -52,15 +52,15 @@
 </div>
 <div class="flex items-center justify-between w-full gap-4 px-4 mt-4 text-center mobile-nav">
 	<span class="text-ShortTextM font-ibmPlexMono hover:underline text-center text-accentPurple">
-		<a href=".../eingg/m/">Dashboard</a>
+		<a href="/m/">Dashboard</a>
 	</span>
 	<span class="text-ShortTextM font-ibmPlexMono hover:underline text-center ">
-		<a href=".../eingg/m/">Restake</a>
+		<a href="/m/">Restake</a>
 	</span>
 	<span class="text-ShortTextM font-ibmPlexMono hover:underline text-center ">
-		<a href=".../eingg/m/">Operator</a>
+		<a href="/m/">Operator</a>
 	</span>
-	<span class="text-ShortTextM font-ibmPlexMono hover:underline text-center "><a href=".../eingg/m/">AVS</a></span>
+	<span class="text-ShortTextM font-ibmPlexMono hover:underline text-center "><a href="/m/">AVS</a></span>
 </div>
 
 
@@ -71,7 +71,7 @@
 <div class="container px-4 mx-auto mt-4 mb-24 sm:mt-6 sm:px-0">
     <div class="flex flex-col items-center justify-center w-full h-auto gap-4 sm:h-36 lg:h-40 sm:flex-row">
         <div class="flex-col items-center justify-center hidden w-full h-full gap-4 sm:flex"><span class="text-Heading2 font-abcRepro">To start restaking</span><button class="h-fit font-ibmPlexMono inline-block focus:border-borderFocus focus:shadow-[0px_0px_0px_4px_rgba(255,255,255,0.24)] outline-none bg-interactivePrimary border-2 border-transparent hover:bg-interactivePrimaryHover active:bg-interactivePrimaryPress focus:bg-interactivePrimaryFocus text-inversePrimaryFg px-4 py-2 text-ShortTextS w-fit"
-                type="button" data-cypress="connectWallet"><a href=".../eingg/m/">Connect Wallet</a></button></div>
+                type="button" data-cypress="connectWallet"><a href="/m/">Connect Wallet</a></button></div>
         <div class="flex flex-col items-center justify-center w-full h-full gap-4 py-6 sm:hidden"><span class="text-Heading3 font-abcRepro text-center">Connect your wallet to start restaking</span></div>
     </div>
     <div>
@@ -118,9 +118,9 @@
 	</div>
 	</div>
 <div class="fixed bottom-0 flex justify-between w-full px-4 py-2 bg-quarternaryBg">
-    <div class="flex items-center gap-1 sm:gap-2"><a href=".../eingg/m/" target="blank" rel="noreferrer"><span class="text-ShortTextS font-ibmPlexMono inline text-tertiaryFg hover:text-primaryFg sm:hidden">ToS</span><span class="text-ShortTextS font-ibmPlexMono hidden text-tertiaryFg hover:text-primaryFg sm:inline">Terms of Service</span></a>
+    <div class="flex items-center gap-1 sm:gap-2"><a href="/m/" target="blank" rel="noreferrer"><span class="text-ShortTextS font-ibmPlexMono inline text-tertiaryFg hover:text-primaryFg sm:hidden">ToS</span><span class="text-ShortTextS font-ibmPlexMono hidden text-tertiaryFg hover:text-primaryFg sm:inline">Terms of Service</span></a>
         <div
-            data-orientation="vertical" aria-orientation="vertical" role="separator" class="h-full w-0.5 bg-borderDivider"></div><a href=".../eingg/m/" target="blank" rel="noreferrer"><span class="text-ShortTextS font-ibmPlexMono inline text-tertiaryFg hover:text-primaryFg sm:hidden">Privacy</span><span class="text-ShortTextS font-ibmPlexMono hidden text-tertiaryFg hover:text-primaryFg sm:inline">Privacy Policy</span></a></div>
+            data-orientation="vertical" aria-orientation="vertical" role="separator" class="h-full w-0.5 bg-borderDivider"></div><a href="/m/" target="blank" rel="noreferrer"><span class="text-ShortTextS font-ibmPlexMono inline text-tertiaryFg hover:text-primaryFg sm:hidden">Privacy</span><span class="text-ShortTextS font-ibmPlexMono hidden text-tertiaryFg hover:text-primaryFg sm:inline">Privacy Policy</span></a></div>
 <button
     type="button" aria-haspopup="dialog" aria-expanded="false" aria-controls="radix-:r3:" data-state="closed" class="dialog-btn">
     <div class="flex items-center justify-end h-full gap-2 ml-auto hover:text-secondaryFg"><span class="text-ShortTextM font-ibmPlexMono hidden sm:inline">TVL</span><span class="text-ShortTextS font-ibmPlexMono inline sm:hidden">TVL</span>
@@ -138,15 +138,15 @@
     </button>
     <div
         class="h-full"><img alt="eigenlayer logo" loading="lazy" width="130" height="64" decoding="async" data-nimg="1" src="markLightD.svg" style="color: transparent;">
-        <div class="flex flex-col text-info"><a href=".../eingg/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Documentation</span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="w-6 h-6 group-hover:text-purple-500 rotate-45"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18"></path></svg></a>
+        <div class="flex flex-col text-info"><a href="/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Documentation</span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="w-6 h-6 group-hover:text-purple-500 rotate-45"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18"></path></svg></a>
             <a
-                href=".../eingg/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Blog</span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                href="/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Blog</span><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                     stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="w-6 h-6 group-hover:text-purple-500 rotate-45"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18"></path></svg></a>
                 <a
-                    href=".../eingg/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Discord</span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                    href="/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Discord</span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="w-6 h-6 group-hover:text-purple-500 rotate-45"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18"></path></svg></a>
                     <a
-                        href=".../eingg/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Forum</span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                        href="/m/" class="flex items-center justify-between gap-4 p-4 group hover:bg-interactiveTertiaryHover hover:text-accentSecondaryFg" target="blank" rel="noreferrer"><span class="text-Heading1 font-abcRepro bg-clip-text text-transparent bg-gradient-to-bl undefined from-info to-info group-hover:from-purple-400 group-hover:to-purple-500">Forum</span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon" class="w-6 h-6 group-hover:text-purple-500 rotate-45"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18"></path></svg></a>
         </div>
 	</div>
